--- a/Backend/BookList/BookList.API/BookList.API.csproj
+++ b/Backend/BookList/BookList.API/BookList.API.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BookList.Core\BookList.Core.csproj" />
     <ProjectReference Include="..\BookList.DomainService\BookList.DomainService.csproj" />
     <ProjectReference Include="..\BookList.Data\BookList.Data.csproj" />
   </ItemGroup>
