--- a/Frontend/book-list-app/package.json
+++ b/Frontend/book-list-app/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.8.4",
     "crypto-js": "^4.2.0",
     "jsencrypt": "^3.3.2",
+    "jwt-decode": "^4.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.4.1",
