--- a/Frontend/book-list-app/package.json
+++ b/Frontend/book-list-app/package.json
@@ -47,6 +47,7 @@
   },
   "devDependencies": {
     "@types/crypto-js": "^4.2.2",
+    "@types/lodash": "^4.17.16",
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.1"
   }
